DIAC-446 Fix code smells in a couple of tests