@@ -35,6 +35,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -265,7 +267,7 @@ public class RequestHomeOfficeDataPreparerTest {
         final List<Value> values = new ArrayList<>();
         Collections.addAll(values,
                 new Value("John Smith", "John Smith-290268"),
-                new Value("Capability Smith", "Capability Smith-210170"),
+                new Value("Capability Brown", "Capability Brown-210170"),
                 new Value("NoMatch", "No Match"));
         DynamicList appellantsList = new DynamicList(values.get(0), values);
 
@@ -306,7 +308,7 @@ public class RequestHomeOfficeDataPreparerTest {
         final List<Value> values = new ArrayList<>();
         Collections.addAll(values,
                 new Value("John Smith", "John Smith-290268"),
-                new Value("Capability Smith", "Capability Smith-210170"),
+                new Value("Capability Brown", "Capability Brown-210170"),
                 new Value("NoMatch", "No Match"));
         DynamicList appellantsList = new DynamicList(values.get(0), values);
 
@@ -344,7 +346,7 @@ public class RequestHomeOfficeDataPreparerTest {
         String errorCode = "2021";
         HomeOfficeError hoError = new HomeOfficeError(errorCode, "SomeApiFailure", false);
         HomeOfficeSearchResponse hoSearchResponse = new HomeOfficeSearchResponse(
-                messageHeader, "someMsgType", Arrays.asList(caseStatus), hoError);
+                messageHeader, "someMsgType", List.of(caseStatus), hoError);
 
         when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(REQUEST_HOME_OFFICE_DATA);
@@ -400,9 +402,9 @@ public class RequestHomeOfficeDataPreparerTest {
                 if (callbackStage == ABOUT_TO_START
                         && (callback.getEvent() == REQUEST_HOME_OFFICE_DATA)
                 ) {
-                    assertTrue(canHandle);
+                    Assertions.assertTrue(canHandle);
                 } else {
-                    assertFalse(canHandle);
+                    Assertions.assertFalse(canHandle);
                 }
             }
 
